--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
     <h1>Azeem Akram</h1>
-    <h2>About Me
-        <p>Hello, I'm Azeem Akram, a senior computer science student in college looking for more experience in this field!</p>
-    </h2>    
-    <h2>What I'm Working On
-        <p>I am currently learning database systems as well as web development tools like React.</p>
-    </h2>
-    <h2>What I'm Looking For
-        <p>I'm looking for an internship or entry level part time programming position!</p>
-    </h2>
+    <body2>
+        <h2>About Me
+            <p>Hello, I'm Azeem Akram, a senior computer science student in college looking for more experience in this field!</p>
+        </h2>    
+        <h2>What I'm Working On
+            <p>I am currently learning database systems as well as web development tools like React.</p>
+        </h2>
+        <h2>What I'm Looking For
+            <p>I'm looking for an internship or entry level part time programming position!</p>
+        </h2>
+    </body2>
 </body>
 </html>
