--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Azeem Akram Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body2>
     <h1>Azeem Akram</h1>
-    <body2>
+    <div class="body2">
         <h2>About Me
             <p>Hello, I'm Azeem Akram, a senior computer science student in college looking for more experience in this field!</p>
         </h2>    
@@ -18,6 +19,6 @@
         <h2>What I'm Looking For
             <p>I'm looking for an internship or entry level part time programming position!</p>
         </h2>
-    </body2>
-</body>
+    </div>
+</body2>
 </html>
