--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Azeem Akram Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body2>
+<he>
     <h1>Azeem Akram</h1>
-    <div class="body2">
+</he>
+<body>
+    <div>
         <h2>About Me
             <p>Hello, I'm Azeem Akram, a senior computer science student in college looking for more experience in this field!</p>
         </h2>    
@@ -20,5 +22,5 @@
             <p>I'm looking for an internship or entry level part time programming position!</p>
         </h2>
     </div>
-</body2>
+</body>
 </html>
