--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Azeem Akram Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<he>
-    <h1>Azeem Akram</h1>
-</he>
+<h1>
+    Azeem Akram
+</h1>
 <body>
     <h2>About Me
         <p>Hello, I'm Azeem Akram, a senior computer science student in college looking for more experience in this field!</p>
