--- a/index.html
+++ b/index.html
@@ -20,5 +20,11 @@
     <h2>What I'm Looking For
         <p>I'm looking for an internship or entry level part time programming position!</p>
     </h2>
+    <h2>GitHub
+        <a href="https://github.com/AzeemAk" target ="_blank"> </a>
+    </h2>
+    <h2>Contact Me
+        <p>AzeemAkram99@gmail.com</p>
+    </h2>
 </body>
 </html>
