--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
     <h2>What I'm Looking For
         <p>I'm looking for an internship or entry level part time programming position!</p>
     </h2>
-    <h2>GitHub
-        <a href="https://github.com/AzeemAk" target ="_blank"> </a>
+    <h2>
+        <a href="https://www.linkedin.com/in/azeem-akram-0a5829210/" target ="_blank"> LinkedIn </a>
     </h2>
+    <h2>
+        <a href="https://github.com/AzeemAk" target ="_blank"> GitHub </a>
+    </h2>
+    
     <h2>Contact Me
         <p>AzeemAkram99@gmail.com</p>
     </h2>
