--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <h1 class = "he">Azeem Akram </h1>
 
 <body>
+    <div class="image-cropper">
+        <img src="IMG_1416.jpg" class="rounded" />
+    </div>
+      
     <h2>About Me
         <p>Hello, I'm Azeem Akram, a senior computer science student in college looking for more experience in this field!</p>
     </h2>    
