--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="image-cropper">
-        <img src="IMG_1416.jpg" class="rounded" />
+        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQHyjDlyD4smvQ/profile-displayphoto-shrink_100_100/0/1619386841852?e=1637798400&v=beta&t=vgoMD4vR-gLM4-YTL_wzJQdp0Ms1JYDcVmg2zCOVVLA" class="rounded" />
     </div>
       
     <h2>About Me
