--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="image-cropper">
-        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQHyjDlyD4smvQ/profile-displayphoto-shrink_100_100/0/1619386841852?e=1637798400&v=beta&t=vgoMD4vR-gLM4-YTL_wzJQdp0Ms1JYDcVmg2zCOVVLA" class="rounded" />
+        <img src="https://avatars.githubusercontent.com/u/71991086?v=4" class="rounded" />
     </div>
       
     <h2>About Me
