--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h1 class = "he">Azeem Akram </h1>
 
 <body>
-    <div class="image-cropper">
+    <div style="align-items: center;">
         <img src="https://avatars.githubusercontent.com/u/71991086?v=4" class="rounded" />
     </div>
       
